@@ -645,6 +645,7 @@ Other memory:
 	* Implemented receive timeouts via setsockopt(SO_RCVTIMEO).
 	* Provide support for multiple network devices
 	* Implement socket ioctl() calls to set addresses
+	* Added listen() and accept()
 </pre></ul>
 
 <table width ="100%">
